# lib/db/src/schema/settings.ts
@@ -32,6 +32,8 @@ export const storeSettingsTable = pgTable("store_settings", {
   whatsappNumber: text("whatsapp_number"),
   navbarBgColor: text("navbar_bg_color"),
   navbarTextColor: text("navbar_text_color"),
+  drawerBgColor: text("drawer_bg_color"),
+  drawerTextColor: text("drawer_text_color"),
 });
 
 export const insertStoreSettingsSchema = createInsertSchema(
